gagful 6.6 lunagc migration